<resources>
    <string name="app_name">Sliding Puzzle 15</string>
    <string name="start_game">Start Game</string>
    <string name="puzzle_1">1</string>
    <string name="puzzle_2">2</string>
    <string name="puzzle_3">3</string>
    <string name="puzzle_4">4</string>
    <string name="puzzle_5">5</string>
    <string name="puzzle_6">6</string>
    <string name="puzzle_7">7</string>
    <string name="puzzle_8">8</string>
    <string name="puzzle_9">9</string>
    <string name="puzzle_10">10</string>
    <string name="puzzle_11">11</string>
    <string name="puzzle_12">12</string>
    <string name="puzzle_13">13</string>
    <string name="puzzle_14">14</string>
    <string name="puzzle_15">15</string>
    <string name="puzzle_16">16</string>
    <string name="holder"> </string>
    <string name="empty"> . </string>
    <string name="steps_default">0</string>
    <string name="times_default">00:00:00</string>
    <string name="shuffle">Shuffle</string>
    <string name="zero">0</string>
    <string name="last_step_count">Last Step Count</string>
    <string name="last_time_count">Last Finished Time</string>
    <string name="zero_second">00:00:00</string>
    <string name="text_step">Steps:</string>
    <string name="text_time">Times:</string>
    <string name="best_step_count">Best Step Count</string>
    <string name="best_time_count">Best Finished Time</string>
    <string name="congrats">Congrats!</string>
    <string name="results">Results:</string>
    <string name="text_dialog">Want to start again?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back_dialog">Exit Game</string>
    <string name="back_message">Exit game?</string>
    <string name="dark_mode">Dark Mode</string>
</resources>