<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_step"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_time"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_steps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/steps_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_times"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/times_default"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/puzzle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:tag="00"
            android:text="@string/puzzle_1" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/button1"
            android:tag="01"
            android:text="@string/puzzle_2" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/button2"
            android:tag="02"
            android:text="@string/puzzle_3" />

        <Button
            android:id="@+id/button4"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/button3"
            android:tag="03"
            android:text="@string/puzzle_4" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonStyle"
            android:layout_below="@id/button1"
            android:layout_alignParentStart="true"
            android:tag="10"
            android:text="@string/puzzle_5" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonStyle"
            android:layout_below="@id/button2"
            android:layout_toEndOf="@id/button5"
            android:tag="11"
            android:text="@string/puzzle_6" />

        <Button
            android:id="@+id/button7"
            style="@style/ButtonStyle"
            android:layout_below="@id/button3"
            android:layout_toEndOf="@id/button6"
            android:tag="12"
            android:text="@string/puzzle_7" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonStyle"
            android:layout_below="@id/button4"
            android:layout_toEndOf="@id/button7"
            android:tag="13"
            android:text="@string/puzzle_8" />

        <Button
            android:id="@+id/button9"
            style="@style/ButtonStyle"
            android:layout_below="@id/button5"
            android:layout_alignParentStart="true"
            android:tag="20"
            android:text="@string/puzzle_9" />

        <Button
            android:id="@+id/button10"
            style="@style/ButtonStyle"
            android:layout_below="@id/button6"
            android:layout_toEndOf="@id/button9"
            android:tag="21"
            android:text="@string/puzzle_10" />

        <Button
            android:id="@+id/button11"
            style="@style/ButtonStyle"
            android:layout_below="@id/button7"
            android:layout_toEndOf="@id/button10"
            android:tag="22"
            android:text="@string/puzzle_11" />

        <Button
            android:id="@+id/button12"
            style="@style/ButtonStyle"
            android:layout_below="@id/button8"
            android:layout_toEndOf="@id/button11"
            android:tag="23"
            android:text="@string/puzzle_12" />

        <Button
            android:id="@+id/button13"
            style="@style/ButtonStyle"
            android:layout_below="@id/button9"
            android:layout_alignParentStart="true"
            android:tag="30"
            android:text="@string/puzzle_13" />

        <Button
            android:id="@+id/button14"
            style="@style/ButtonStyle"
            android:layout_below="@id/button10"
            android:layout_toEndOf="@id/button13"
            android:tag="31"
            android:text="@string/puzzle_14" />

        <Button
            android:id="@+id/button15"
            style="@style/ButtonStyle"
            android:layout_below="@id/button11"
            android:layout_toEndOf="@id/button14"
            android:tag="32"
            android:text="@string/puzzle_15" />

        <Button
            android:id="@+id/button16"
            style="@style/ButtonStyle"
            android:layout_below="@id/button12"
            android:layout_toEndOf="@id/button15"
            android:background="@color/freeButton"
            android:tag="33"
            android:text="@string/empty" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_shuffle"
            style="@style/ButtonStylePrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/shuffle" />
    </LinearLayout>
</FrameLayout>